apps/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
spec:
  type: NodePort
  selector:
    app: podinfo
  ports:
  - port: 80
    targetPort: 9898
    nodePort: 30001
